Finsished with Card Game
Finished card game program, now can display the heart, spade, diamond, and club graphic after the card.  need to figure out how to draw a box around the text

--- a/DPV2/EdwardWelborn_CardGame/EdwardWelborn_CardGame/EdwardWelborn_CardGame.csproj
+++ b/DPV2/EdwardWelborn_CardGame/EdwardWelborn_CardGame/EdwardWelborn_CardGame.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\PrivateAssemblies\MySql.Data.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\MySQL\MySQL Installer for Windows\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
