--- a/DPV2/EdwardWelborn_TimeTrackerApp/EdwardWelborn_TimeTrackerApp/EdwardWelborn_TimeTrackerApp.csproj
+++ b/DPV2/EdwardWelborn_TimeTrackerApp/EdwardWelborn_TimeTrackerApp/EdwardWelborn_TimeTrackerApp.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
-      <HintPath>..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2017\Enterprise\Common7\IDE\PrivateAssemblies\MySql.Data.dll</HintPath>
+      <HintPath>C:\Program Files (x86)\MySQL\MySQL Installer for Windows\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
