Adding files for ce02
adding project files for CE02

--- a/VFW/EdwardWelborn_CE02/EdwardWelborn_CE02/EdwardWelborn_CE02.csproj
+++ b/VFW/EdwardWelborn_CE02/EdwardWelborn_CE02/EdwardWelborn_CE02.csproj
@@ -58,6 +58,7 @@
     <Compile Include="fmInputForm.Designer.cs">
       <DependentUpon>fmInputForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="People.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fmInputForm.resx">
