--- a/VFW/EdwardWelborn_CE04/EdwardWelborn_CE04/EdwardWelborn_CE04.csproj
+++ b/VFW/EdwardWelborn_CE04/EdwardWelborn_CE04/EdwardWelborn_CE04.csproj
@@ -78,11 +78,11 @@
     <Compile Include="listViewForm.Designer.cs">
       <DependentUpon>listViewForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="mainForm.cs">
+    <Compile Include="dataEntryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="mainForm.Designer.cs">
-      <DependentUpon>mainForm.cs</DependentUpon>
+    <Compile Include="dataEntryForm.Designer.cs">
+      <DependentUpon>dataEntryForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,8 +92,8 @@
     <EmbeddedResource Include="listViewForm.resx">
       <DependentUpon>listViewForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="mainForm.resx">
-      <DependentUpon>mainForm.cs</DependentUpon>
+    <EmbeddedResource Include="dataEntryForm.resx">
+      <DependentUpon>dataEntryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
