--- a/VFW/EdwardWelborn_CE07/EdwardWelborn_CE07/EdwardWelborn_CE07.csproj
+++ b/VFW/EdwardWelborn_CE07/EdwardWelborn_CE07/EdwardWelborn_CE07.csproj
@@ -57,6 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TradeQuote.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
