--- a/SDV3111-0/Lab2/Lab2/Lab2.vcxproj
+++ b/SDV3111-0/Lab2/Lab2/Lab2.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5b39b3e1-18aa-495a-b5f3-6c6d9c40e32a}</ProjectGuid>
-    <RootNamespace>CTest</RootNamespace>
+    <ProjectGuid>{51a6a6f6-fb6b-4d5f-b669-0948c5a243e3}</ProjectGuid>
+    <RootNamespace>Lab2</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="C++Test.cpp" />
+    <ClCompile Include="Console.cpp" />
+    <ClCompile Include="Lab2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Console.h" />
+    <ClInclude Include="pch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
