Lab3 Poniters completed and tested to make sure I get the right answers

--- a/SDV3111-0/Lab3/Lab3/Lab3.vcxproj.filters
+++ b/SDV3111-0/Lab3/Lab3/Lab3.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Lab3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Car.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Car.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
