Program almost complete except for the following items:
// MARK: TODO
//
// 1.. FIX RANDOMIZE

// 2.. Universe Size settings Form

// 3.. living cell count is not working

// 4.. RunTo goes to generations instantly rather than via the timer.interval

// 5.. Finite / Toroidal

// 6.. Show Hide Neighbors count

--- a/COS119-0/Game of Life/Game of Life/App.config
+++ b/COS119-0/Game of Life/Game of Life/App.config
@@ -34,6 +34,9 @@
             <setting name="description" serializeAs="String">
                 <value>Conway's Game of Life Simulation for FullSail University Class Assignment by Roy Welborn</value>
             </setting>
+            <setting name="seed" serializeAs="String">
+                <value>2022</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
