--- a/COS119-0/Game of Life/Game of Life/Game of Life.csproj
+++ b/COS119-0/Game of Life/Game of Life/Game of Life.csproj
@@ -58,16 +58,37 @@
     <Compile Include="fmMain.Designer.cs">
       <DependentUpon>fmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="RunToDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RunToDialog.Designer.cs">
+      <DependentUpon>RunToDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TimerIntervalDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TimerIntervalDialog.Designer.cs">
+      <DependentUpon>TimerIntervalDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GraphicsPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SeedDialog.designer.cs">
+      <DependentUpon>SeedDialog.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fmMain.resx">
       <DependentUpon>fmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="RunToDialog.resx">
+      <DependentUpon>RunToDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -79,6 +100,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SeedDialog.resx">
+      <DependentUpon>SeedDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TimerIntervalDialog.resx">
+      <DependentUpon>TimerIntervalDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
