--- a/COS119-0/Game of Life/Game of Life/Properties/Settings.settings
+++ b/COS119-0/Game of Life/Game of Life/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="description" Type="System.String" Scope="User">
       <Value Profile="(Default)">Conway's Game of Life Simulation for FullSail University Class Assignment by Roy Welborn</Value>
     </Setting>
+    <Setting Name="seed" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2022</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
