Stilll trying to figure out why my toroidal/finite isn't working.  I HAD show neighbors count workind and somehow broke it... haven't worked on the runTO problem yet. Trying to get the finite/toroidal to work right

--- a/COS119-0/Game of Life/Game of Life/App.config
+++ b/COS119-0/Game of Life/Game of Life/App.config
@@ -37,6 +37,9 @@
             <setting name="seed" serializeAs="String">
                 <value>2022</value>
             </setting>
+            <setting name="lineWidth" serializeAs="String">
+                <value>2</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
