added final comments to each method

--- a/COS119-0/Game of Life/Game of Life/Properties/Settings.settings
+++ b/COS119-0/Game of Life/Game of Life/Properties/Settings.settings
@@ -32,5 +32,11 @@
     <Setting Name="lineWidth" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">2</Value>
     </Setting>
+    <Setting Name="columns" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
+    <Setting Name="rows" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
