--- a/COS119-0/Game of Life/Game of Life/App.config
+++ b/COS119-0/Game of Life/Game of Life/App.config
@@ -40,6 +40,12 @@
             <setting name="lineWidth" serializeAs="String">
                 <value>2</value>
             </setting>
+            <setting name="columns" serializeAs="String">
+                <value>50</value>
+            </setting>
+            <setting name="rows" serializeAs="String">
+                <value>50</value>
+            </setting>
         </Game_of_Life.Properties.Settings>
     </userSettings>
 </configuration>
